[package]
name = "initium-inanis-core"
description = "BInitium Covenantum Novum"
version = "Inanis"
homepage = "https://initium.foundation/"
readme = "../README.md"
repository = "https://github.com/initiumprime/initium"
authors = ["Initium Labs <labs@initium.foundation>"]
license = "Apache-2.0"
edition = "2022"

[badges]
codecov = { repository = "initiumprime/initium", branch = "master", service = "github" }

[dependencies]
ahash = "0.7.6"
base64 = "0.13.0"
bincode = "1.3.3"
bs58 = "0.4.0"
chrono = { version = "0.4.11", features = ["serde"] }
crossbeam-channel = "0.5"
dashmap = { version = "4.0.2", features = ["rayon", "raw-api"] }
etcd-client = { version = "0.8.1", features = ["tls"] }
fs_extra = "1.2.0"
histogram = "0.6.9"
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "0.4.17"
lru = "0.7.6"
min-max-heap = "1.3.0"
rand = "0.7.0"
rand_chacha = "0.2.2"
rayon = "1.5.3"
serde = "1.0.137"
serde_derive = "1.0.103"
sys-info = "0.9.1"
tempfile = "3.3.0"
thiserror = "1.0"
tokio = { version = "~1.14.1", features = ["full"] }
trees = "0.4.2"

[dev-dependencies]
matches = "0.1.9"
raptorq = "1.7.0"
reqwest = { version = "0.11.10", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde_json = "1.0.81"
serial_test = "0.6.0"
static_assertions = "1.1.0"
systemstat = "0.1.11"

[target."cfg(unix)".dependencies]
sysctl = "0.4.4"

[build-dependencies]
rustc_version = "0.4"

[[bench]]
name = "banking_stage"

[[bench]]
name = "cluster_info"

[[bench]]
name = "gen_keys"

[[bench]]
name = "sigverify_stage"

[[bench]]
name = "retransmit_stage"

[[bench]]
name = "unprocessed_packet_batches"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
