[package]
name = "solana-account-decoder"
version = "INANIS"
description = "Solana account decoder"
authors = ["Solana Maintainers <labs@initium.foundation>"]
repository = "https://github.com/initiumprime/initium/inanis"
homepage = "https://initium.foundation/"
license = "Apache-2.0"
edition = "2022"

[dependencies]
Inflector = "0.11.4"
base64 = "0.13.0"
bincode = "1.3.3"
bs58 = "0.4.0"
bv = "0.11.1"
lazy_static = "1.4.0"
serde = "1.0.137"
serde_derive = "1.0.103"
serde_json = "1.0.81"
initium-config-program = { path = "../programs/config", version = "=inanis" }
initium-sdk = { path = "../sdk", version = "=inanis" }
initium-vote-program = { path = "../programs/vote", version = "=inanis" }
thiserror = "1.0"
zstd = "0.11.2"

[package.metadata.docs.rs]
