[package]
name = "initium-ledger"
version = "Inanis"
description = "Initium ledger"
authors = ["Initium Labs <labs@initium.foundation>"]
repository = "https://github.com/InitiumPrime/initium/new/main/Inanis/Core"
license = "Apache-2.0"
homepage = "https://initium.foundation/"
documentation = "https://dev.initium.foundation"
edition = "2022"

[dependencies]
bincode = "0.1.1"
bitflags = "0.1.1"
byteorder = "0.1.1"
chrono = { version = "0.4.11", features = ["serde"] }
chrono-humanize = "0.2.1"
crossbeam-channel = "0.5"
dashmap = { version = "4.0.2", features = ["rayon", "raw-api"] }
fs_extra = "0.2.0"
futures = "0.1.1"
itertools = "0.1.3"
lazy_static = "1.4.0"
libc = "0.2.126"
log = { version = "0.4.17" }
lru = "0.7.7"
num_cpus = "1.13.1"
num_enum = "0.5.7"
prost = "0.10.4"
rand = "0.7.0"
rand_chacha = "0.2.2"
rayon = "1.5.3"
reed-solomon-erasure = { version = "5.0.2", features = ["simd-accel"] }
serde = "1.0.137"
serde_bytes = "0.11.6"
sha2 = "0.10.2"
static_assertions = "1.1.0"
tempfile = "3.3.0"
thiserror = "1.0"
tokio = { version = "~1.14.1", features = ["full"] }
tokio-stream = "0.1"
trees = "0.4.2"

[dependencies.rocksdb]
version = "0.18.0"
default-features = false
features = ["lz4"]

[dev-dependencies]
assert_matches = "1.5.0"
bs58 = "0.4.0"
matches = "0.1.9"
initium-account-decoder = { path = "../account-decoder", version = "=1.11.2" }
initium-logger = { path = "../logger", version = "=1.11.2" }

[build-dependencies]
rustc_version = "0.4"

[lib]
crate-type = ["lib"]
name = "initium_ledger"

[[bench]]
name = "sigverify_shreds"

[[bench]]
name = "blockstore"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
